--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!DOCTYPE html>
+<link rel="stylesheet" href="style.css" />
+<html>
+<head>
+	<title>Jake Mayr's Webpage</title>
+</head>
+
+<body>
+<h1>Hello World</h1>
+</body>
+
+ 
+</html>
