made major changes to website and added pictures

--- a/index.html
+++ b/index.html
@@ -1,13 +1,53 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="style.css" />
+<script type="text/javascript" src="index.js"></script>
 <html>
  <head>
-	<title>Jake Mayr's Webpage</title>
+  <style>
+  .bg-1 {
+    background-color: #87CEFA; /* Green */
+    color: #ffffff;
+  }
+  .bg-2 {
+    background-color: #474e5d; /* Dark Blue */
+    color: #ffffff;
+  }
+  .bg-3 {
+    background-color: #ffffff; /* White */
+    color: #555555;
+  }
+  .container-fluid {
+  padding-top: 70px;
+  padding-bottom: 70px;
+  }
+  </style>
+
+	<title>Jake Mayr</title>
+		<meta charset="utf-8">
+	  	<meta name="viewport" content="width=device-width, initial-scale=1">
+	  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
  </head>
 
 <body>
- <h1>Hello World</h1>
- <h4 id='date'></h4>
+
+<div class="container-fluid bg-1 text-center">
+	<h1>Jake Mayr</h1>
+ 	<img src="square_headshot.jpg" class="img-circle" width="200" height="200" alt="headshot">
+	<h4 id='date'></h4>
+</div>
+
+<div class="container-fluid bg-2 text-center">
+  	<h3>What Am I?</h3>
+  	<p>Lorem ipsum..</p>
+</div>
+
+<div class="container-fluid bg-3 text-center">
+  	<h3>Where To Find Me?</h3>
+  	<p>Lorem ipsum..</p>
+</div>
+
 </body>
 
  
