--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Me</a>
+      <a class="navbar-brand" href="#">JAKE</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
@@ -55,16 +55,15 @@
 <div class="container-fluid bg-1 text-center">
 	<h1>Jake Mayr</h1>
  	<img src="square_headshot.jpg" class="img-responsive img-circle" style="display:inline" width="20%" height="auto" alt="headshot">
-	<h4 id='date'></h4>
 </div>
 
 <div class="container-fluid bg-2 text-center">
-  	<h3>What Am I?</h3>
+  	<h3>Work Experience</h3>
   	<p>Lorem ipsum..</p>
 </div>
 
 <div class="container-fluid bg-3 text-center">
-  	<h3>Where To Find Me?</h3>
+  	<h3>Projects</h3>
   	<p>Lorem ipsum..</p>
 </div>
 
