Updated resume on website and pdf

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">HOME</a></li>
-        <li><a href="JakeMayrResume2019.pdf">RESUME</a></li>
+        <li><a href="Resume_JakeMayr.pdf">RESUME</a></li>
         <li><a href="mailto:jakemayr@umich.edu">CONTACT</a></li>
       </ul>
     </div>
