added portfolio page

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <li><a href="#">HOME</a></li>
         <li><a href="Resume_JakeMayr.pdf">RESUME</a></li>
         <li><a href="mailto:jakemayr@umich.edu">CONTACT</a></li>
+        <li><a href="portfolio.html">PORTFOLIO</a></li>
       </ul>
     </div>
   </div>
