--- a/portfolio.html
+++ b/portfolio.html
@@ -6,8 +6,7 @@
 
 <!-- TODO: Erase one of these two. Replace the 'href' link below with a link to your WebGL build page. -->
 <ul>
-<li><a href="https://cdn.destructoid.com//ul/317824-zelda%20memes.jpg">The Legend of Zelda (Unity Remaster)</a></li>
-<li><a href="https://pre00.deviantart.net/4fa1/th/pre/i/2010/254/0/4/chibi_metroid_by_freak_sider-d2yhe9u.png">Metroid (Unity Remaster)</a></li>
+<li><a href="WebBuild/webzelda.html">The Legend of Zelda (Unity Remaster)</a></li>
 </ul>
 
 </html>
