--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <title>Jake Mayr Portfolio</title>
 
 <h1>The Portfolio of Jake Mayr</h1>
-<a href="#">HOME</a>
+<a href="index.html">HOME</a>
 
 <h2>Projects</h2>
 
