--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 
 <!-- TODO: Erase one of these two. Replace the 'href' link below with a link to your WebGL build page. -->
 <ul>
-<li><a href="WebBuild/webZelda.html">The Legend of Zelda (Unity Remaster)</a></li>
+<li><a href="WebBuild/webzelda.html">The Legend of Zelda (Unity Remaster)</a></li>
 </ul>
 
 </html>
