added levels 5 and 6 and sound effects and fixes

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,7 @@
 <ul>
 <li><a href="WebBuild/webzelda.html">The Legend of Zelda (Unity Remaster)</a></li>
 <li><a href="p2WebBuild/rampage.html">RAMpage (Playtest Version)</a></li>
+<li><a href="p2WebBuildGold/rampage.html">RAMpage (Gold Version)</a></li>
 </ul>
 
 </html>
